==============================
   FoxBot Version History
==============================

--------------------------------------------------------------------------------
Version 0.87
??-??-2024
Updated by RoboCop
--------------------------------------------------------------------------------

- Scouts, Spies, Medics and Engineer bots will not use their lame default weapons when been spawned

- Bots will use Nail Guns for destroying SG turrets from a long distance

- Soldier bots should now Rocket Jump slightly better, and for Medics and Scouts to Conc Jump

- HW bots Minigun accuracy reduced to give them more recoil and less aimbot

- Sniper bot's average accuracy reduced to avoid less aimbot shoots and headshots

- Nailguns and Super Nailguns should now be very accurate as those guns are meant for destroying SG Turrets

- Repaired the rogue pathways in phantom, rock2 and schtop

- Added some Rocket/Conc jumps for rock2 and ravelin

TODO List:-

>> Complete 'botdontmove' in order for "GolfBots" to stay stationary

>> To allow medic bots to heal more often, but not allow `JOB_BUFF_ALLY` to consume too many cells as engineers

>> Fix bots navigation when shot by enemies as they sometimes cannot seem to detect where damage is coming from

>> To prevent bots from shooting at spy corpses too long as, they aren't aware that a player switched teams as enemy spy

>> To improve the pipebomb laying trap pattern and to plant at the flag

>> Allow bots to toss grenades at a higher elevation angle and from a lower distance as their target aim is too far

>> BONUS: Maybe add a feature for bots to have experience and wisdom or learned data in order to be a bit more human

--------------------------------------------------------------------------------
Version 0.85
December-23-2023
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ 2kfort23
	+ 2kfort5
	+ junob7
	+ lastresort_b1
	+ gauntlet
	+ tfc_orange
