@@ -108,11 +108,11 @@ jobList_struct jl[JOB_TYPE_TOTAL] = {
 	{ 460, "JOB_GET_HEALTH" }, { 440, "JOB_GET_ARMOR" }, { 580, "JOB_GET_AMMO" }, { 660, "JOB_DISGUISE" },
 	{ 190, "JOB_FEIGN_AMBUSH" }, { 570, "JOB_SNIPE" }, { 250, "JOB_GUARD_WAYPOINT" }, { 550, "JOB_DEFEND_FLAG" },
 	{ 710, "JOB_GET_FLAG" }, { 790, "JOB_CAPTURE_FLAG" }, { 340, "JOB_HARRASS_DEFENSE" },
-	{ 730, "JOB_ROCKET_JUMP" }, { 740, "JOB_CONCUSSION_JUMP" },
+	{ 740, "JOB_ROCKET_JUMP" }, { 750, "JOB_CONCUSSION_JUMP" },
 	{ 400, "JOB_DETPACK_WAYPOINT" }, { 600, "JOB_PIPETRAP" }, { 500, "JOB_INVESTIGATE_AREA" },
 	{ 560, "JOB_PURSUE_ENEMY" }, { 200, "JOB_PATROL_HOME" }, { 700, "JOB_SPOT_STIMULUS" },
 	{ 620, "JOB_ATTACK_BREAKABLE" }, { 430, "JOB_ATTACK_TELEPORT" }, { 590, "JOB_SEEK_BACKUP" },
-	{ 300, "JOB_AVOID_ENEMY" }, { 750, "JOB_AVOID_AREA_DAMAGE" },
+	{ 300, "JOB_AVOID_ENEMY" }, { 730, "JOB_AVOID_AREA_DAMAGE" },
 	{ 690, "JOB_INFECTED_ATTACK" }, { 720, "JOB_BIN_GRENADE" },
 	{ 780, "JOB_DROWN_RECOVER" }, { 240, "JOB_MELEE_WARRIOR" }, { 210, "JOB_GRAFFITI_ARTIST" },
 };
